--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,5 @@
 url=https://www.saucedemo.com/
 username=standard_user
 password=secret_sauce
-default.browser=chrome
-chrome.driver=src/test/resources/chromedriver.exe
-firefox.driver.path=path/to/geckodriver
-edge.driver.path=path/to/edgedriver
+browser=firefox
+
